--- a/hamgooonWebServerV1/appsettings.json
+++ b/hamgooonWebServerV1/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=hamgooonDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=45.82.136.106,2525;Database=hamgounDb;Persist Security Info=True;User ID=AppUser;Password=AppUser"
   },
-
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
