--- a/hamgooonWebServerV1/appsettings.production.json
+++ b/hamgooonWebServerV1/appsettings.production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=45.82.136.106,2525;Database=hamgounDb;Persist Security Info=True;User ID=AppUser;Password=AppUser"
   }
 }
