--- a/hamgooonWebServerV1/appsettings.json
+++ b/hamgooonWebServerV1/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=hamgooonDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=45.82.136.106,2525;Database=hamgounDb;Persist Security Info=True;User ID=AppUser;Password=AppUser"
+    "DefaultConnection": "Server=localhost;Database=ef;User=root;Password=ShIn3Ony0uCRazYDi@m0nd;"
   },
   "https_port": 443,
   "Logging": {
