--- a/HamgoonAPI/appsettings.production.json
+++ b/HamgoonAPI/appsettings.production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=hamgounDb;User=root;Password=ShIn3Ony0uCRazYDi@m0nd;"
+    "DefaultConnection": "Server=localhost;Database=hamgoonDb;User=root;Password=admin;"
   }
 }
