--- a/HamgoonAPI/docker-compose.yml
+++ b/HamgoonAPI/docker-compose.yml
@@ -9,6 +9,8 @@ services:
 
   mysql:
     image: "percona:8.0"
+    environment:
+      - MYSQL_ROOT_PASSWORD: admin
     ports:
       - "3306:3306"
     volumes:
