--- a/HamgoonAPI/appsettings.json
+++ b/HamgoonAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=hamgoonDb;User=root;Password=admin;"
+    "DefaultConnection": "Server=mysql;Database=hamgoonDb;User=root;Password=admin;"
   },
   "https_port": 443,
   "Logging": {
