--- a/HamgoonAPI/docker-compose.yml
+++ b/HamgoonAPI/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   mysql:
     image: "percona:8.0"
     environment:
-      - MYSQL_ROOT_PASSWORD=admin
+      MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - "3306:3306"
     volumes:
