--- a/HamgoonAPI/docker-compose.yml
+++ b/HamgoonAPI/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '2'
 services:
-#
+  app:
+    build: .
+    links:
+      - mysql
+    ports:
+      - "80:80"
+
   mysql:
     image: "percona:8.0"
     environment:
