--- a/HamgoonAPI/docker-compose.yml
+++ b/HamgoonAPI/docker-compose.yml
@@ -17,5 +17,5 @@ services:
     expose:
       - '3306' 
     volumes:
-      - "./mysql_data:/var/lib/mysql"
+      - "/mysql_data:/var/lib/mysql"
   
