--- a/Hamgoon.API/appsettings.json
+++ b/Hamgoon.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     /*193.176.241.61*/
-    "DefaultConnection": "Server=mysql;Database=hamgoonDb;User=root;Password=admin;"
+    "DefaultConnection": "Server=193.176.241.61;Database=hamgoonDb;User=root;Password=admin;"
   },
   "https_port": 443,
   "Logging": {
